QE-859 Fix search filters on tablet size

--- a/wp-content/themes/quarkexpeditions/src/front-end/components/expedition-search/style.scss
+++ b/wp-content/themes/quarkexpeditions/src/front-end/components/expedition-search/style.scss
@@ -236,7 +236,7 @@
 			}
 		}
 
-		@media screen and (min-width: grid-size(lg)) {
+		@media screen and (min-width: calc(grid-size(lg) + 1px)) {
 			display: none;
 		}
 	}
